[package]
name = "try-rust-hot-reload"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Тип библиотеки для WebAssembly

[dependencies]
wasm-bindgen = "0.2" # Зависимость для взаимодействия между Rust и JavaScript
console_error_panic_hook = { version = "0.1", optional = true } # Опциональная зависимость для обработки ошибок

[dev-dependencies]
wasm-pack = "0.10" # Инструмент для упаковки Wasm в формат, подходящий для Webpack

[profile.release]
panic = "abort" # Оптимизация для релизной версии[dependencies]
